--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="shortcut icon" href="img/logo.png">
     <title> تقني سوفت </title>
-    <base href="/">
+    <!-- <base href="/"> -->
 
     <!-- Global stylesheets -->
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
