--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                         </div>
                         <div class="col-md-12"><textarea style="font-family: Cairo, sans-serif; " name="entry.1577272882" id="entry.1577272882" placeholder="محتوى الرسالة "></textarea></div>
                         <div class="col-md-12 sub-but">
-                            <input type="submit" value="ارسال" class="btn btn-general btn-white" style="font-family: Cairo, sans-serif;" role="button"></input>
+                            <input type="submit" value="ارسال" class="btn btn-general btn-white" style="font-family: Cairo, sans-serif;color:black" role="button"></input>
                         </div>
                     </div>
                 </form>
